// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"InputLabel" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: initial;
  display: inline;
  font-size: 12px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.emotion-1:focus-within {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <label
    className="emotion-1"
  >
    Label
  </label>
</div>
`;

exports[`"InputLabel" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: initial;
  display: inline;
  font-size: 12px;
  font-weight: 300;
  text-align: left;
  text-transform: none;
  width: 100%;
}

.emotion-1:focus-within {
  color: #0772de;
}

<div
  className="emotion-0"
>
  <label
    className="emotion-1"
  >
    Label
  </label>
</div>
`;

exports[`"LabelLink" renders (dark theme) 1`] = `
.emotion-0 {
  background: #000;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: #fff;
  display: inline;
  font-size: 12px;
  font-weight: 600;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-1:visited,
.emotion-1:link,
.emotion-1:active {
  color: #fff;
}

.emotion-1:hover {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
  >
    LabelLink
  </a>
</div>
`;

exports[`"LabelLink" renders 1`] = `
.emotion-0 {
  background: #edeff0;
  -webkit-transition: background 0.15s;
  transition: background 0.15s;
}

.emotion-1 {
  color: rgb(29, 30, 31);
  display: inline;
  font-size: 12px;
  font-weight: 600;
  text-align: left;
  text-transform: uppercase;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.24s;
  transition: all 0.24s;
}

.emotion-1:visited,
.emotion-1:link,
.emotion-1:active {
  color: rgb(29, 30, 31);
}

.emotion-1:hover {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

<div
  className="emotion-0"
>
  <a
    className="emotion-1"
  >
    LabelLink
  </a>
</div>
`;
